--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,23 +55,16 @@ button {
     background-color: transparent;
 }
 
-* {
+/* * {
     -webkit-touch-callout: none;
-    /* iOS Safari */
     -webkit-user-select: none;
-    /* Safari */
     -khtml-user-select: none;
-    /* Konqueror HTML */
     -moz-user-select: none;
-    /* Old versions of Firefox */
     -ms-user-select: none;
-    /* Internet Explorer/Edge */
     user-select: none;
-    /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
-}
+} */
 
 :target {
-    scroll-margin-top: 150px;
+    scroll-margin-top: 200px;
     scroll-behavior: smooth;
 }
